# 2526_PROG3_Rastering

./: CMakeLists.txt  README.md
app/: CMakeLists.txt
app/include/: LineRaster.h  Maths.h  Scene.h  Screen.h  ShapeRasterizer.h
app/src/: Main.cpp  Maths.cpp  Scene.cpp  Screen.cpp  ShapeRasterizer.cpp
test/: CMakeLists.txt
test/include/: clove-unit.h
test/src/: ExampleTest.cpp
